bpo-31903: Release the GIL when calling into SystemConfiguration

Make sure we release the GIL when calling `SCDynamicStoreCopyProxies` to avoid potential deadlocking if other Python  threads also call into `NSUserDefaults`.